Add spawn system, remove text from damage overlay

--- a/assets/ui/damageFlash.ui
+++ b/assets/ui/damageFlash.ui
@@ -3,17 +3,6 @@
     "skin": "damageFlashDefault",
     "contents": {
         "type": "relativeLayout",
-        "contents": [
-            {
-                "type": "UILabel",
-                "text": "DAMAGE",
-                "layoutInfo": {
-                    "use-content-width": true,
-                    "use-content-height": true,
-                    "position-horizontal-center": {},
-                    "position-vertical-center": {}
-                }
-            }
-        ]
+        "contents": []
     }
 }
